# libvips

./: .clang-format  .codespellrc  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .travis.yml  404.md  =  AUTHORS  CITATION.cff  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog  Dockerfile  Doxyfile  Gemfile  INSTALL  Makefile.am  NEWS  NOTES  README  README.md  THANKS  TODO  _config.yml  acinclude.m4  asan.supp  autogen.sh  bootstrap.sh  confdefs.h  configure.ac  configure.in  configure~  gen-api.rb  gtk-doc.make  index.html  index.md  install.md  (+25 more)
contrib/vips2dj/: Makefile.am  vips2ah.c  vips2dj.c  vips2dj.h
cplusplus/: .gitignore  Doxyfile  Doxyfile.in  Makefile.am  README  README.md  VConnection.cpp  VError.cpp  VImage.cc  VImage.cpp  VInterpolate.cpp  VRegion.cpp  VStream.cpp  gen-operators.py  meson.build  try93.cc  vips-operators.cc  vips-operators.cpp
cplusplus/examples/: a.out  avg.cc  avg.cpp  buffer.cpp  embed.cc  embed.cpp  invert.cc  invert.cpp  keep.cpp  profile.cpp  resize.cpp  test.cpp  test_overloads.cc  test_overloads.cpp  tomemory.cpp  try.cc  try.cpp  uhdr.cpp
cplusplus/latex/: namespaces.tex  namespacevips.tex  refman.tex
cplusplus/old/: try92.cc  try93.cc
doc/: .gitignore  Cite.md  Cite.xml  Developer-checklist.md  Developer-checklist.xml  Doxyfile  Doxyfile.in  Examples.md  Examples.xml  How-it-opens-files.md  How-it-opens-files.xml  How-it-works.md  How-it-works.xml  Makefile  Makefile.am  Makehtmlman  Making-image-pyramids.md  Making-image-pyramids.xml  README  Using-vipsthumbnail.md  Using-vipsthumbnail.xml  binding.md  binding.xml  check-sections.py  cite.md  developer-checklist.md  examples.md  extending.md  extending.xml  file-format.md  file-format.xml  fixup-gir-for-doc.py  fixup-load-as-ctor.py  function-list.md  function-list.old  function-list.xml  gen-function-list.py  gen-rename.py  gtk-doc.make  gtkdoc-mkhtml  (+47 more)
doc/old/: Using-vipsthumbnail.xml  binding.xml
doc/reference/: Makefile.am  VIPS-docs.sgml  binding.xml  extending.xml  function-list.xml  gen-function-list.py  libvips-decl-list.txt.bak  libvips-decl.txt.bak  libvips-docs.sgml.in  libvips-docs.xml.in  libvips-scan  libvips-scan.c  using-C.xml  using-command-line.xml  using-cpp.xml  using-python.xml
doc/src/: Makefile  applintro.tex  cppintro.tex  fileformat.tex  format.tex  func.tex  html.cfg  interpolate.tex  iosys.tex  ipio.tex  mydefs.tex  object.tex  operintro.tex  packages.tex  pio.tex  refintro.tex  vdisplay.tex  verror.tex  vimage.tex  vipsmanual.tex  vmask.tex  wio.tex
doc/still-to-convert/: How-it-opens-files.xml  function-list.xml  using-command-line.xml
fuzz/: Makefile.am  StandaloneFuzzTargetMain.c  config.h  failing-alloc.c  generate_vips_dict.c  generate_vips_dict.sh  generic_buffer_fuzzer.cc  generic_buffer_with_args_fuzzer.cc  gifsave_buffer_fuzzer.cc  jpegsave_buffer_fuzzer.cc  jpegsave_file_fuzzer.cc  meson.build  mosaic_fuzzer.cc  oss_fuzz_build.sh  pngsave_buffer_fuzzer.cc  sharpen_fuzzer.cc  smartcrop_fuzzer.cc  test_fuzz.sh  thumbnail_fuzzer.cc  tsan_config.h  vips_chain_fuzzer.cc  vips_fuzzer.cc  vips_fuzzer.dict  vips_fuzzer_common.h  webpsave_buffer_fuzzer.cc
fuzz/common_fuzzer_corpus/: clusterfuzz-testcase-minimized-jpegsave_buffer_fuzzer-5658586599915520  clusterfuzz-testcase-minimized-sharpen_fuzzer-5203581631725568  clusterfuzz-testcase-minimized-webpsave_buffer_fuzzer-5674696418263040  generic_buffer_with_args_avif_to_avif  generic_buffer_with_args_gif_to_gif_all_pages  generic_buffer_with_args_jpeg_to_png  (+21 more)
libsrc/: Makefile.am  dummy.c  makedef.pl  vips.def
libsrcCC/: Makefile.am  VDisplay.cc  VError.cc  VImage.cc  VMask.cc  vipsc++.cc
libvips/: Makefile.am  Vips-8.0.metadata  dummy.c  dummy2.cc  fred#  fred~  introspect.c  jxlload.c  meson.build
libvipsCC/: Makefile.am  README.txt  VDisplay.cc  VError.cc  VImage.cc  VMask.cc  vipsc++.cc
man/: IM_ARRAY.3  IM_IMAGE_ADDR.3  IM_MAX.3  IM_NEW.3  IM_REGION_ADDR.3  IM_REGION_LSKIP.3  IM_RINT.3  Makefile.am  VipsFormat.3  VipsInterpolate.3  VipsObject.3  batch_crop.1  batch_image_convert.1  batch_image_shrink.1  batch_rubber_sheet.1  binfile.1  cooc.1  cooc_features.1  debugim.1  edvips.1  glds.1  glds_features.1  header.1  im_Lab2LabQ.3  im_Lab2UCS.3  im_LabQ2disp.3  im_LabQ2disp_table.3  im_XYZ2disp.3  im_abs.3  im_add.3  im_add_preclose_callback.3  im_addgnoise.3  im_affine.3  im_affinei.3  im_affinei_all.3  im_analyze2vips.3  im_benchmark.3  im_binfile.3  im_bits_of_fmt.3  im_black.3  (+179 more)
python/: Makefile.am  README  README.md  README.txt  Vips.py  finalize.py  find_class_methods.py  im.sh  log  setup.py  soak.sh  test.py  test_all.py  test_arithmetic.py  test_colour.py  test_conversion.py  test_convolution.py  test_gobject.py  test_overrides.py  try.py  try10.py  try11.py  try12.py  try2.py  try3.py  try4.py  try5.py  try6.py  try7.py  try8.py  try9.py  vips.py  vips8.py  vipsimage.py  vipsobject.py  x.v
test/: .gitignore  Makefile.am  README.md  meson.build  test_all.py  test_arithmetic.py  test_cli.sh  test_colour.py  test_connections  test_connections.c  test_connections.sh  test_conversion.py  test_convolution.py  test_create.py  test_descriptors  test_descriptors.c  test_descriptors.sh  test_draw.py  test_foreign.py  test_formats.sh  test_histogram.py  test_iofuncs.py  test_keep.sh  test_morphology.py  test_preserve.sh  test_python.sh  test_resample.py  test_seq.sh  test_stall.sh  test_streams  test_streams.c  test_streams.sh  test_strip_profile.sh  test_threading.sh  test_thumbnail.sh  test_timeout_gifsave.c  test_timeout_webpsave.c  test_token.c  test_token.sh  variables.sh.in
tools/: Makefile.am  batch_crop  batch_crop.in  batch_image_convert  batch_image_convert.in  batch_image_shrink.in  batch_rubber_sheet  batch_rubber_sheet.in  cmyk2srgbjpeg.c  edvips  edvips.c  find_mosaic  find_mosaic.c  header  header.c  light_correct  light_correct.in  mergeup  mergeup.c  meson.build  shrink_width  vips  vips-7.27  vips-8.0  vips-8.1  vips-8.11  vips.c  vipsedit  vipsedit.c  vipsheader  vipsheader.c  vipsprofile  vipsprofile.py  vipsthumbnail  vipsthumbnail.c
(+8700 files in other folders)
